A decent amount of work on laying out the header & footer

--- a/index.html
+++ b/index.html
@@ -9,5 +9,61 @@
     <meta name="description" content="The website for Clarkson University's Software Mirror">
   </head>
   <body>
+    <header>
+      <div class="container top-header"><a href="http://clarkson.edu/"><img src="img/clarksonlogo.jpg"></a>
+        <h1 class="left">Clarkson Mirror</h1>
+      </div>
+      <nav>
+        <div class="container">
+          <ul> 
+            <li class="current">Mirror Home</li>
+            <li>Distributions</li>
+            <li>3rd Party Repos</li>
+            <li>Misc.</li>
+            <li>Directory Listing</li>
+            <li>History</li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <div class="carasouel">
+      <div class="container">
+        <h1>Hello World</h1>
+      </div>
+    </div>
+    <div class="content">
+      <div class="container">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce ultrices nisi sit amet lorem mollis, et hendrerit lectus venenatis. Fusce in finibus purus. Aenean fringilla non nulla et ornare. Sed condimentum ex at quam posuere auctor. Proin arcu lacus, euismod non nisi ut, congue fermentum libero. Sed bibendum aliquet nulla non semper. Cras non convallis magna, ut consectetur tellus. Nulla non bibendum nunc, quis dictum odio. Vestibulum mattis vestibulum ullamcorper. Aliquam enim lacus, euismod vitae lectus in, viverra finibus felis. Mauris in ullamcorper purus. Cras eget sem mi. Donec ipsum erat, bibendum facilisis metus quis, efficitur sagittis purus. Integer egestas, lacus eget sodales facilisis, lectus tortor viverra quam, vehicula dignissim nulla augue quis leo.
+          Integer sed venenatis lacus. Etiam faucibus id ipsum sed volutpat. Ut eget rutrum turpis. Vestibulum ac aliquet urna. Suspendisse tristique, lorem ut convallis accumsan, dui risus lacinia lectus, vitae condimentum est purus condimentum tortor. Cras tempor aliquam dapibus. Praesent pharetra eros aliquet ligula porttitor venenatis. Suspendisse vitae tristique nunc. Nulla vel maximus metus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus elit elit, vehicula congue accumsan et, elementum in dui. Sed lobortis lorem in bibendum feugiat.
+          Donec ex metus, blandit quis arcu et, finibus placerat nunc. Donec non dui a elit vestibulum lobortis a et mi. Phasellus quis mauris vehicula, mollis orci sit amet, tempor ex. Etiam id lectus eget ligula aliquet pharetra. Integer tincidunt tellus eget lectus lobortis pulvinar. Sed at orci sit amet lorem efficitur laoreet. Integer non urna ex. Integer luctus ultrices augue, sit amet sodales sem mattis quis. Pellentesque vitae risus eros.
+          Morbi eu nulla eget sem dapibus dignissim. Duis ac neque et lectus iaculis malesuada. Praesent quis mi finibus, scelerisque purus vitae, ullamcorper tellus. Praesent eros mi, aliquam in ornare at, consectetur id quam. Duis condimentum volutpat mi, faucibus pulvinar felis vulputate sed. Mauris convallis ante non massa tempor luctus. In hac habitasse platea dictumst.
+          Nullam ac viverra elit. Nulla tincidunt turpis sapien, eu sodales eros feugiat vitae. Nullam vitae urna imperdiet, consequat lorem eget, dictum enim. Maecenas aliquet varius consequat. Morbi vehicula sapien eu posuere laoreet. Donec eget tortor quis orci sollicitudin vestibulum et vel tellus. Praesent scelerisque ullamcorper scelerisque. Integer vitae egestas turpis. Proin eget egestas dolor, vel cursus erat. Nunc malesuada tempus dictum. In congue, lorem ut aliquet mattis, ante est sodales augue, vitae scelerisque urna odio et turpis.
+          Mauris ultrices ullamcorper blandit. Nunc consequat finibus cursus. Nullam vel scelerisque elit, nec euismod lacus. Nulla rutrum varius diam ullamcorper molestie. Morbi vulputate hendrerit ex eget lobortis. Phasellus elementum nulla id felis rhoncus, vitae elementum dui mollis. Quisque placerat sollicitudin ex ac tristique. Etiam eu odio massa. Integer faucibus mauris non venenatis imperdiet. Donec sed lorem urna. Sed vel tempor mi. Aenean congue aliquam libero, sed lobortis dolor. Integer luctus ullamcorper porta.
+          Vestibulum quam quam, gravida in augue quis, mattis condimentum quam. Phasellus bibendum dolor eget massa facilisis, nec pellentesque metus pretium. Morbi elementum suscipit pellentesque. Aenean sit amet tortor ligula. Vestibulum eu posuere felis, ut tempus orci. Mauris vel luctus orci. Donec tincidunt faucibus congue. Nullam rhoncus, risus ultrices consectetur fermentum, nibh nulla pulvinar risus, et fermentum nisi purus quis libero. Duis sed eros volutpat, congue turpis nec, gravida odio. Quisque ut turpis augue. Fusce finibus vestibulum tincidunt. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin consequat lorem nisl, mollis vehicula urna tristique in.
+          Vestibulum eleifend cursus diam quis ultricies. In ac pulvinar velit, et commodo leo. Etiam quis mattis augue. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nunc venenatis lacus augue, a mattis nunc consectetur et. Sed et augue fermentum, sagittis eros a, bibendum magna. Vestibulum vitae massa sodales, pharetra purus sit amet, imperdiet neque. Phasellus sodales cursus suscipit. Etiam blandit urna felis, at pretium velit semper ac. Nunc maximus erat sapien. Duis id orci mattis, lacinia sem in, ultricies mi. Pellentesque sit amet mauris tincidunt metus cursus mattis ac id diam. In imperdiet nisi eros, quis dictum quam tempus eget.
+          
+        </p>
+      </div>
+    </div>
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col col--2-of-4">
+            <h3>Clarkson Open Source Institute</h3>
+            <h3>Clarkson University | Science Center 336</h3>
+          </div>
+          <div class="col col--2-of-4">
+            <h3>Contact</h3>
+            <p><a href="mailto:cslabadmin@clarkson.edu">cslabadmin@clarkson.edu</a></p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col col--1-of-3 col--push-1-of-3">
+            <p>Main design by Benjamin Lannon</p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
