Finished styling of desktop navbar

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
       <nav>
         <div class="container">
           <ul> 
-            <li class="current">Mirror Home</li>
-            <li>Distributions</li>
-            <li>3rd Party Repos</li>
-            <li>Misc.</li>
-            <li>Directory Listing</li>
-            <li>History</li>
+            <li class="current"><a href="">Mirror Home</a></li>
+            <li><a href="">Distributions</a></li>
+            <li> <a href="">3rd Party Repos</a></li>
+            <li> <a href="">Misc.</a></li>
+            <li> <a href="">Directory Listing</a></li>
+            <li> <a href="">History</a></li>
           </ul>
         </div>
       </nav>
