--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta name="description" content="The website for Clarkson University's Software Mirror">
+    <script>
+      window.onload = function() {
+      var foo = document.getElementById("navhome");
+      foo.setAttribute("class", "current"); };
+    </script>
   </head>
   <body>
     <header>
@@ -16,12 +21,12 @@
       <nav>
         <div class="container">
           <ul> 
-            <li class="current"><a href="">Mirror Home</a></li>
-            <li><a href="">Distributions</a></li>
-            <li> <a href="">3rd Party Repos</a></li>
-            <li> <a href="">Misc.</a></li>
-            <li> <a href="">Directory Listing</a></li>
-            <li> <a href="">History</a></li>
+            <li id="navhome"><a href="index.html">Mirror Home</a></li>
+            <li id="navdistributions"><a href="distributions.html">Distributions</a></li>
+            <li id="nav3rdparty"><a href="">3rd Party Repos</a></li>
+            <li id="navmisc"><a href="">Misc.</a></li>
+            <li id="navdirectory"><a href="">Directory Listing</a></li>
+            <li id="navhistory"> <a href="">History</a></li>
           </ul>
         </div>
       </nav>
@@ -47,32 +52,29 @@
           </p>
         </div>
         <hr>
-        <div class="row">
-          <div class="col col--1-of-4"><img src="img/debian_logo.svg"></div>
-          <div class="col col--1-of-4"><img src="img/gnu.svg"></div>
-          <div class="col col--1-of-4"><img src="img/tux.png"></div>
-          <div class="col col--1-of-4"><img src="img/tux.png"></div>
-        </div>
-        <div class="row">
-          <div class="col col--1-of-4">
+        <div class="row mid">
+          <div class="col col--1-of-3"><img src="img/debian_logo.svg"></div>
+          <div class="col col--2-of-3">
             <h2>Linux Distros</h2>
             <p>
               We host around 20 distributions including Debian, Ubuntu, Arch Linux, Linux Mint,
               and many more. Many are official mirrors and the majority are updated 4 times a
-              day from upstream mirrors.
+              day from upstream mirrors. Learn more on the Distributions page.
             </p>
           </div>
-          <div class="col col--1-of-4">
+        </div>
+        <div class="row mid">
+          <div class="col col--1-of-3"><img src="img/gnu.svg"></div>
+          <div class="col col--2-of-3">
             <h2>GNU Software</h2>
-            <p>This is some text to talk about the things and stuff</p>
+            <p>This is some text to talk about the things and stuff  </p>
           </div>
-          <div class="col col--1-of-4">
+        </div>
+        <div class="row mid">
+          <div class="col col--1-of-3"><img src="img/tux.png"></div>
+          <div class="col col--2-of-3">
             <h2>Linux Kernel</h2>
             <p>This is some text to talk about the things and stuff</p>
-          </div>
-          <div class="col col--1-of-4">
-            <h2>And more!</h2>
-            <p>If you are interested in having Software hosted on Mirror, contact us!</p>
           </div>
         </div>
         <hr>
@@ -80,7 +82,7 @@
         <p>
           The newest iteration will be completed in January 2016, but we have had Mirror
           running for almost a decade now. If you want to learn more about the newest
-          iteration or the history behind the project. Visit the History page.
+          iteration or the history behind the project, Visit the History page.
           
         </p>
       </div>
