Responsive Design implemented

--- a/index.html
+++ b/index.html
@@ -18,19 +18,31 @@
       <div class="container top-header"><a href="http://clarkson.edu/"><img src="img/clarksonlogo.jpg"></a>
         <h1 class="left">Mirror</h1>
       </div>
-      <nav>
+      <nav id="navdesktop">
         <div class="container">
-          <ul> 
-            <li id="navhome"><a href="index.html">Mirror Home</a></li>
-            <li id="navdistributions"><a href="distributions.html">Distributions</a></li>
-            <li id="nav3rdparty"><a href="">3rd Party Repos</a></li>
-            <li id="navmisc"><a href="">Misc.</a></li>
-            <li id="navdirectory"><a href="">Directory Listing</a></li>
-            <li id="navhistory"> <a href="">History</a></li>
-          </ul>
+              <ul> 
+                <li id="navhome"><a href="index.html">Mirror Home</a></li>
+                <li id="navdistributions"><a href="distributions.html">Distributions</a></li>
+                <li id="nav3rdparty"><a href="">3rd Party Repos</a></li>
+                <li id="navmisc"><a href="">Misc.</a></li>
+                <li id="navdirectory"><a href="">Directory Listing</a></li>
+                <li id="navhistory"> <a href="">History</a></li>
+              </ul>
         </div>
       </nav>
     </header>
+    <nav id="navmobile">
+      <div class="container">
+            <ul> 
+              <li id="navhome"><a href="index.html">Mirror Home</a></li>
+              <li id="navdistributions"><a href="distributions.html">Distributions</a></li>
+              <li id="nav3rdparty"><a href="">3rd Party Repos</a></li>
+              <li id="navmisc"><a href="">Misc.</a></li>
+              <li id="navdirectory"><a href="">Directory Listing</a></li>
+              <li id="navhistory"> <a href="">History</a></li>
+            </ul>
+      </div>
+    </nav>
     <div class="carasouel">
       <div class="container">
         <h1>Welcome to Mirror</h1>
