--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Clarkson University Mirror - Index</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="icon" href="favicon.ico">
     <meta name="theme-color" content="#035245">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
