--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
               <ul> 
                 <li id="navhome"><a href="index.html">Mirror Home</a></li>
                 <li id="navdistributions"><a href="distributions.html">Distributions</a></li>
-                <li id="nav3rdparty"><a href="">3rd Party Repos</a></li>
-                <li id="navmisc"><a href="">Misc.</a></li>
-                <li id="navdirectory"><a href="">Directory Listing</a></li>
-                <li id="navhistory"> <a href="">History</a></li>
+                <li id="nav3rdparty"><a href="3rdparty.html">3rd Party Repos</a></li>
+                <li id="navmisc"><a href="misc.html">Misc.</a></li>
+                <li id="navdirectory"><a href="directory.html">Directory Listing</a></li>
+                <li id="navhistory"> <a href="history.html">History</a></li>
               </ul>
         </div>
       </nav>
@@ -37,10 +37,10 @@
             <ul> 
               <li id="navhome"><a href="index.html">Mirror Home</a></li>
               <li id="navdistributions"><a href="distributions.html">Distributions</a></li>
-              <li id="nav3rdparty"><a href="">3rd Party Repos</a></li>
-              <li id="navmisc"><a href="">Misc.</a></li>
-              <li id="navdirectory"><a href="">Directory Listing</a></li>
-              <li id="navhistory"> <a href="">History</a></li>
+              <li id="nav3rdparty"><a href="3rdparty.html">3rd Party Repos</a></li>
+              <li id="navmisc"><a href="misc.html">Misc.</a></li>
+              <li id="navdirectory"><a href="directory.html">Directory Listing</a></li>
+              <li id="navhistory"> <a href="history.html">History</a></li>
             </ul>
       </div>
     </nav>
