--- a/history.html
+++ b/history.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Clarkson University Mirror - Distributions</title>
+    <title>Clarkson University Mirror - History</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <meta name="theme-color" content="#035245">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,7 @@
     <meta name="description" content="The website for Clarkson University's Software Mirror">
     <script>
       window.onload = function() {
-        var foo = document.getElementById('navdistributions');
+        var foo = document.getElementById('navhistory');
         foo.setAttribute("class", "current");
       };
       
