--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <title>Clarkson University Mirror - Index</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <script src="jquery-2.1.4.min.js"></script>
+    <script src="main.js"></script>
     <link rel="icon" href="favicon.ico">
     <meta name="theme-color" content="#035245">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,7 +20,7 @@
   <body>
     <header>
       <div class="container top-header"><a href="http://clarkson.edu/"><img src="img/clarksonlogo.jpg"></a>
-        <h1 class="left">Mirror</h1>
+        <h1 class="left"><a href="index.html">Mirror</a></h1><i class="fa fa-bars menu-button"></i>
       </div>
       <nav id="navdesktop">
         <div class="container">
