--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>Clarkson University Mirror - Index</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <script src="jquery-2.1.4.min.js"></script>
-    <script src="main.js"></script>
+    <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="js/main.js"></script>
     <link rel="icon" href="favicon.ico">
     <meta name="theme-color" content="#035245">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
