--- a/distributions.html
+++ b/distributions.html
@@ -52,7 +52,7 @@
       <div class="container">
         <div class="row">
           <div class="col col--2-of-4">
-            <h3>Clarkson Open Source Institute</h3>
+            <h3> <a href="http://cslabs.clarkson.edu">Clarkson Open Source Institute</a></h3>
             <h3>Clarkson University | Science Center 336</h3>
           </div>
           <div class="col col--2-of-4">
