--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
           <h2>About Mirror</h2>
           <p>
             This site is a public repository of free and open source software. It is located at
-            Clarkson University in Potsdam, NY, US. This site strives to provide exposure to open
-            source software and various open source operating systems. Currently, this site
-            mirrors several Linux distributions, some third party repositories, and even the Linux
-            Kernel. You can find out more information about everything we mirror by choosing
-            the category that you are interested in.
+            <a href="http://www.clarkson.edu/">Clarkson University</a> in Potsdam, NY, US. This
+            site strives to provide exposure to open source software and various open source
+            operating systems. Currently, this site mirrors several Linux distributions, some
+            third party repositories, and even the Linux Kernel. You can find out more information
+            about everything we mirror by choosing the category that you are interested in.
             
           </p>
         </div>
@@ -75,7 +75,7 @@
             <p>
               We host around 20 distributions including Debian, Ubuntu, Arch Linux, Linux Mint,
               and many more. Many are official mirrors and the majority are updated 4 times a
-              day from upstream mirrors. Learn more on the Distributions page.
+              day from upstream mirrors. Learn more on the <a href="distributions.html">Distributions</a> page.
             </p>
           </div>
         </div>
@@ -98,7 +98,7 @@
         <p>
           The newest iteration will be completed in January 2016, but we have had Mirror
           running for almost a decade now. If you want to learn more about the newest
-          iteration or the history behind the project, Visit the History page.
+          iteration or the history behind the project, Visit the <a href="history.html">History</a> page.
           
         </p>
       </div>
@@ -107,7 +107,7 @@
       <div class="container">
         <div class="row">
           <div class="col col--2-of-4">
-            <h3>Clarkson Open Source Institute</h3>
+            <h3> <a href="http://cslabs.clarkson.edu">Clarkson Open Source Institute</a></h3>
             <h3>Clarkson University | Science Center 336</h3>
           </div>
           <div class="col col--2-of-4">
