More work on typography and updating fonts

--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
     <div class="carasouel">
       <div class="container">
         <h1>Welcome to Mirror</h1>
-        <h2>Subtitle goes here...</h2>
       </div>
     </div>
     <div class="content">
@@ -83,14 +82,20 @@
           <div class="col col--1-of-3"><img src="img/gnu.svg"></div>
           <div class="col col--2-of-3">
             <h2>GNU Software</h2>
-            <p>This is some text to talk about the things and stuff  </p>
+            <p>
+              We also host a large quantity of software maintained by the GNU Project. you can
+              find it on the <a href="misc.html">Misc.</a> page.
+            </p>
           </div>
         </div>
         <div class="row mid">
           <div class="col col--1-of-3"><img src="img/tux.png"></div>
           <div class="col col--2-of-3">
             <h2>Linux Kernel</h2>
-            <p>This is some text to talk about the things and stuff</p>
+            <p>Versions of the Linux Kernel (Up to 4.3.X) can also be found on the <a href="misc.html">Misc.</a>
+              page. found in the same place is documentation and souce for the kernel.
+              
+            </p>
           </div>
         </div>
         <hr>
