--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Clarkson University Mirror - Index</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="js/vendors/jquery-2.1.4.min.js"></script>
     <script src="js/main.js"></script>
     <link rel="icon" href="favicon.ico">
     <meta name="theme-color" content="#035245">
