Beginning work on distros page

--- a/distributions.html
+++ b/distributions.html
@@ -48,6 +48,48 @@
             </ul>
       </div>
     </nav>
+    <div class="content">
+      <div class="container">
+        <h1>Distributions</h1>
+        <div class="distro">
+          <h3>Arch Linux</h3>
+          <div class="distro"> </div>
+          <h3>Backtrack</h3>
+          <div class="distro">   </div>
+          <h3>CentOS (Official Mirror)</h3>
+          <div class="distro"> </div>
+          <h3>Debian</h3>
+          <div class="distro"> </div>
+          <h3>Fedora (Official Mirror)</h3>
+          <div class="distro"> </div>
+          <h3>Gentoo</h3>
+          <div class="distro"> </div>
+          <h3>IPFire (Official Mirror)</h3>
+          <div class="distro"></div>
+          <h3>Knoppix</h3>
+          <div class="distro"></div>
+          <h3>LinuxMint</h3>
+          <div class="distro"></div>
+          <h3>OpenBSD</h3>
+          <div class="distro"></div>
+          <h3>pfSense</h3>
+          <div class="distro"></div>
+          <h3>OpenSUSE</h3>
+          <div class="distro"></div>
+          <h3>Sabayon (Official Mirror)</h3>
+          <div class="distro"></div>
+          <h3>Serenity Linux (Main Mirror)</h3>
+          <div class="distro"></div>
+          <h3>Slackware</h3>
+          <div class="distro"></div>
+          <h3>Slitaz (Official Mirror)</h3>
+          <div class="distro"></div>
+          <h3>Ubutnu (Official Mirror)</h3>
+          <div class="distro"></div>
+          <h3>Unity Linux (Official Mirror)</h3>
+        </div>
+      </div>
+    </div>
     <footer>
       <div class="container">
         <div class="row">
