Continuing work on the Distributions Page

--- a/distributions.html
+++ b/distributions.html
@@ -51,42 +51,70 @@
     <div class="content">
       <div class="container">
         <h1>Distributions</h1>
-        <div class="distro">
-          <h3>Arch Linux</h3>
-          <div class="distro"> </div>
-          <h3>Backtrack</h3>
-          <div class="distro">   </div>
-          <h3>CentOS (Official Mirror)</h3>
-          <div class="distro"> </div>
-          <h3>Debian</h3>
-          <div class="distro"> </div>
-          <h3>Fedora (Official Mirror)</h3>
-          <div class="distro"> </div>
-          <h3>Gentoo</h3>
-          <div class="distro"> </div>
-          <h3>IPFire (Official Mirror)</h3>
-          <div class="distro"></div>
-          <h3>Knoppix</h3>
-          <div class="distro"></div>
-          <h3>LinuxMint</h3>
-          <div class="distro"></div>
-          <h3>OpenBSD</h3>
-          <div class="distro"></div>
-          <h3>pfSense</h3>
-          <div class="distro"></div>
-          <h3>OpenSUSE</h3>
-          <div class="distro"></div>
-          <h3>Sabayon (Official Mirror)</h3>
-          <div class="distro"></div>
-          <h3>Serenity Linux (Main Mirror)</h3>
-          <div class="distro"></div>
-          <h3>Slackware</h3>
-          <div class="distro"></div>
-          <h3>Slitaz (Official Mirror)</h3>
-          <div class="distro"></div>
-          <h3>Ubutnu (Official Mirror)</h3>
-          <div class="distro"></div>
-          <h3>Unity Linux (Official Mirror)</h3>
+        <div class="row">
+          <div class="col col--1-of-4 distro-contents">
+            <h2>Contents</h2>
+            <ul>
+              <li>Arch Linux</li>
+              <li>Backtrack</li>
+              <li>CentOS</li>
+              <li>Debian</li>
+              <li>Fedora</li>
+              <li>Gentoo</li>
+              <li>IPFire</li>
+              <li>Knoppix</li>
+              <li>LinuxMint</li>
+              <li>OpenBSD</li>
+              <li>pfSense</li>
+              <li>OpenSUSE</li>
+              <li>Sabayon</li>
+              <li>Serenity Linux</li>
+              <li>Slackware</li>
+              <li>Slitaz</li>
+              <li>Ubuntu</li>
+              <li>Unity Linux</li>
+            </ul>
+          </div>
+          <div class="col col--3-of-4">
+            <div id="arch" class="distro">
+              <h3>Arch Linux</h3>
+              <h5>homepage:</h5><a href="http://archlinux.org">http://archlinux.org</a>
+              <div class="distro"> </div>
+              <h3>Backtrack</h3>
+              <div class="distro">   </div>
+              <h3>CentOS (Official Mirror)</h3>
+              <div class="distro"> </div>
+              <h3>Debian</h3>
+              <div class="distro"> </div>
+              <h3>Fedora (Official Mirror)</h3>
+              <div class="distro"> </div>
+              <h3>Gentoo</h3>
+              <div class="distro"> </div>
+              <h3>IPFire (Official Mirror)</h3>
+              <div class="distro"></div>
+              <h3>Knoppix</h3>
+              <div class="distro"></div>
+              <h3>LinuxMint</h3>
+              <div class="distro"></div>
+              <h3>OpenBSD</h3>
+              <div class="distro"></div>
+              <h3>pfSense</h3>
+              <div class="distro"></div>
+              <h3>OpenSUSE</h3>
+              <div class="distro"></div>
+              <h3>Sabayon (Official Mirror)</h3>
+              <div class="distro"></div>
+              <h3>Serenity Linux (Main Mirror)</h3>
+              <div class="distro"></div>
+              <h3>Slackware</h3>
+              <div class="distro"></div>
+              <h3>Slitaz (Official Mirror)</h3>
+              <div class="distro"></div>
+              <h3>Ubutnu (Official Mirror)</h3>
+              <div class="distro"></div>
+              <h3>Unity Linux (Official Mirror)</h3>
+            </div>
+          </div>
         </div>
       </div>
     </div>
