--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
         </div>
         <hr>
         <div class="row mid">
-          <div class="col col--1-of-3"><img src="img/debian_logo.svg"></div>
-          <div class="col col--2-of-3">
+          <div class="col col--1-of-3"><img src="img/debian_logo.svg">
             <h2>Linux Distros</h2>
             <p>
               We host around 20 distributions including Debian, Ubuntu, Arch Linux, Linux Mint,
@@ -77,20 +76,14 @@
               day from upstream mirrors. Learn more on the <a href="distributions.html">Distributions</a> page.
             </p>
           </div>
-        </div>
-        <div class="row mid">
-          <div class="col col--1-of-3"><img src="img/gnu.svg"></div>
-          <div class="col col--2-of-3">
+          <div class="col col--1-of-3"><img src="img/gnu.svg">
             <h2>GNU Software</h2>
             <p>
               We also host a large quantity of software maintained by the GNU Project. you can
               find it on the <a href="misc.html">Misc.</a> page.
             </p>
           </div>
-        </div>
-        <div class="row mid">
-          <div class="col col--1-of-3"><img src="img/tux.png"></div>
-          <div class="col col--2-of-3">
+          <div class="col col--1-of-3"><img src="img/tux.png">
             <h2>Linux Kernel</h2>
             <p>Versions of the Linux Kernel (Up to 4.3.X) can also be found on the <a href="misc.html">Misc.</a>
               page. found in the same place is documentation and souce for the kernel.
