--- a/distributions.html
+++ b/distributions.html
@@ -31,7 +31,7 @@
                 <li id="nav3rdparty"><a href="3rdparty.html">3rd Party Repos</a></li>
                 <li id="navmisc"><a href="misc.html">Misc.</a></li>
                 <li id="navdirectory"><a href="directory.html">Directory Listing</a></li>
-                <li id="navhistory"> <a href="history.html">History</a></li>
+                <li id="navhistory"> <a href="history.html">History & Sponsors</a></li>
               </ul>
         </div>
       </nav>
@@ -44,7 +44,7 @@
               <li id="nav3rdparty"><a href="3rdparty.html">3rd Party Repos</a></li>
               <li id="navmisc"><a href="misc.html">Misc.</a></li>
               <li id="navdirectory"><a href="directory.html">Directory Listing</a></li>
-              <li id="navhistory"> <a href="history.html">History</a></li>
+              <li id="navhistory"> <a href="history.html">History & Sponsors</a></li>
             </ul>
       </div>
     </nav>
