Working on History / Sponsors Page

--- a/history.html
+++ b/history.html
@@ -48,6 +48,21 @@
             </ul>
       </div>
     </nav>
+    <div class="content">
+      <div class="container">
+        <h1>History</h1>
+        <p>Mirror has existed for about a decade in the labs. </p>
+      </div>
+      <div class="container">
+        <h1>Sponsors</h1>
+        <p>We would like to thank everyone that helped out contributing to help the new mirror possible, including:</p>
+        <div class="row">
+          <div class="col col--2-of-4"><a href="http://www.vmware.com/"><img src="img/vmware.jpg" class="logo"></a></div>
+          <div class="col col--2-of-4"><a href="https://www.siegetechnologies.com/"><img src="img/siege.jpg" class="logo"></a></div>
+        </div>
+        <p>and these other sponsors:</p>
+      </div>
+    </div>
     <footer>
       <div class="container">
         <div class="row">
