--- a/history.html
+++ b/history.html
@@ -62,6 +62,9 @@
         </div>
         <p>and these other sponsors:</p>
       </div>
+      <div class="container subfooter center">
+        <p>The logos are copyrighted by VMware and Siege Technologies respectively and fair use is given.</p>
+      </div>
     </div>
     <footer>
       <div class="container">
