Back to work on Mirror2016. Completed Misc. page

--- a/history.html
+++ b/history.html
@@ -28,10 +28,10 @@
               <ul> 
                 <li id="navhome"><a href="index.html">Mirror Home</a></li>
                 <li id="navdistributions"><a href="distributions.html">Distributions</a></li>
-                <li id="nav3rdparty"><a href="3rdparty.html">3rd Party Repos</a></li>
                 <li id="navmisc"><a href="misc.html">Misc.</a></li>
                 <li id="navdirectory"><a href="directory.html">Directory Listing</a></li>
                 <li id="navhistory"> <a href="history.html">History & Sponsors</a></li>
+                <li><a href="http://cslabs.clarkson.edu">CSLabs Homepage</a></li>
               </ul>
         </div>
       </nav>
@@ -41,10 +41,10 @@
             <ul> 
               <li id="navhome"><a href="index.html">Mirror Home</a></li>
               <li id="navdistributions"><a href="distributions.html">Distributions</a></li>
-              <li id="nav3rdparty"><a href="3rdparty.html">3rd Party Repos</a></li>
               <li id="navmisc"><a href="misc.html">Misc.</a></li>
               <li id="navdirectory"><a href="directory.html">Directory Listing</a></li>
               <li id="navhistory"> <a href="history.html">History & Sponsors</a></li>
+              <li><a href="http://cslabs.clarkson.edu">CSLabs Homepage</a></li>
             </ul>
       </div>
     </nav>
@@ -61,6 +61,13 @@
           <div class="col col--2-of-4"><a href="https://www.siegetechnologies.com/"><img src="img/siege.jpg" class="logo"></a></div>
         </div>
         <p>and these other sponsors:</p>
+        <ul style="list-style-type: none;" class="center">
+          <li>Eric Busse</li>
+          <li>Ted Champagne</li>
+          <li>Steve Evanchik</li>
+          <li>Wenjin Hu</li>
+          <li>Mark Platek</li>
+        </ul>
       </div>
       <div class="container subfooter center">
         <p>The logos are copyrighted by VMware and Siege Technologies respectively and fair use is given.</p>
