--- a/misc.html
+++ b/misc.html
@@ -28,10 +28,10 @@
               <ul> 
                 <li id="navhome"><a href="index.html">Mirror Home</a></li>
                 <li id="navdistributions"><a href="distributions.html">Distributions</a></li>
-                <li id="nav3rdparty"><a href="3rdparty.html">3rd Party Repos</a></li>
                 <li id="navmisc"><a href="misc.html">Misc.</a></li>
                 <li id="navdirectory"><a href="directory.html">Directory Listing</a></li>
                 <li id="navhistory"> <a href="history.html">History & Sponsors</a></li>
+                <li><a href="http://cslabs.clarkson.edu">CSLabs Homepage</a></li>
               </ul>
         </div>
       </nav>
@@ -41,13 +41,47 @@
             <ul> 
               <li id="navhome"><a href="index.html">Mirror Home</a></li>
               <li id="navdistributions"><a href="distributions.html">Distributions</a></li>
-              <li id="nav3rdparty"><a href="3rdparty.html">3rd Party Repos</a></li>
               <li id="navmisc"><a href="misc.html">Misc.</a></li>
               <li id="navdirectory"><a href="directory.html">Directory Listing</a></li>
               <li id="navhistory"> <a href="history.html">History & Sponsors</a></li>
+              <li><a href="http://cslabs.clarkson.edu">CSLabs Homepage</a></li>
             </ul>
       </div>
     </nav>
+    <div class="content">
+      <div class="container">
+        <section>
+          <h1>GNU Software (Official Mirror)</h1>
+          <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/gnu/">http://mirror.clarkson.edu/gnu/</a><br>
+          <h5>Rsync:</h5> rsync://mirror.clarkson.edu/gnu<br><br>
+          <h5>Upstream Mirror: </h5><a href="http://mirror.rit.edu/">http://mirror.rit.edu/</a><br>
+          <h5>Frequency of Updates:</h5> 4 times Daily<br>
+          <h5>Homepage: </h5><a href="http://directory.fsf.org/GNU/">http://directory.fsf.org/GNU/</a>
+        </section>
+        <section>
+          <h1>Linux (Including Kernel Source)</h1>
+          <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/linux/">http://mirror.clarkson.edu/linux/</a><br>
+          <h5>Rsync:</h5> rsync://mirror.clarkson.edu/linux/<br><br>
+          <h5>Upstream Mirror: </h5><a href="http://rsync.kernel.org/">http://rsync.kernel.org/</a><br>
+          <h5>Frequency of Updates:</h5> 4 times Daily<br>
+          <h5>Homepage: </h5><a href="http://kernel.org">http://kernel.org</a>
+        </section>
+        <section>
+          <h1>Software (Not Linux-specific)</h1>
+          <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/software/">http://mirror.clarkson.edu/software/</a><br>
+          <h5>Rsync:</h5> rsync://mirror.clarkson.edu/software/<br><br>
+          <h5>Upstream Mirror: </h5><a href="http://debian.lcs.mit.edu/">http://debian.lcs.mit.edu/</a><br>
+          <h5>Frequency of Updates:</h5> 4 times Daily<br>
+          <h5>Homepage: </h5><a href="http://kernel.org">http://kernel.org</a>
+        </section>
+        <section>
+          <h1>Isabelle</h1>
+          <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/isabelle/">http://mirror.clarkson.edu/isabelle/</a><br>
+          <h5>Frequency of Updates:</h5> 4 times Daily<br>
+          <h5>Homepage: </h5><a href="https://isabelle.in.tum.de/">https://isabelle.in.tum.de/</a>
+        </section>
+      </div>
+    </div>
     <footer>
       <div class="container">
         <div class="row">
