--- a/distributions.html
+++ b/distributions.html
@@ -28,10 +28,10 @@
               <ul> 
                 <li id="navhome"><a href="index.html">Mirror Home</a></li>
                 <li id="navdistributions"><a href="distributions.html">Distributions</a></li>
-                <li id="nav3rdparty"><a href="3rdparty.html">3rd Party Repos</a></li>
                 <li id="navmisc"><a href="misc.html">Misc.</a></li>
                 <li id="navdirectory"><a href="directory.html">Directory Listing</a></li>
                 <li id="navhistory"> <a href="history.html">History & Sponsors</a></li>
+                <li><a href="http://cslabs.clarkson.edu">CSLabs Homepage</a></li>
               </ul>
         </div>
       </nav>
@@ -41,10 +41,10 @@
             <ul> 
               <li id="navhome"><a href="index.html">Mirror Home</a></li>
               <li id="navdistributions"><a href="distributions.html">Distributions</a></li>
-              <li id="nav3rdparty"><a href="3rdparty.html">3rd Party Repos</a></li>
               <li id="navmisc"><a href="misc.html">Misc.</a></li>
               <li id="navdirectory"><a href="directory.html">Directory Listing</a></li>
               <li id="navhistory"> <a href="history.html">History & Sponsors</a></li>
+              <li><a href="http://cslabs.clarkson.edu">CSLabs Homepage</a></li>
             </ul>
       </div>
     </nav>
