--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
               <ul> 
                 <li id="navhome"><a href="index.html">Mirror Home</a></li>
                 <li id="navdistributions"><a href="distributions.html">Distributions</a></li>
-                <li id="nav3rdparty"><a href="3rdparty.html">3rd Party Repos</a></li>
                 <li id="navmisc"><a href="misc.html">Misc.</a></li>
                 <li id="navdirectory"><a href="directory.html">Directory Listing</a></li>
                 <li id="navhistory"> <a href="history.html">History & Sponsors</a></li>
+                <li><a href="http://cslabs.clarkson.edu">CSLabs Homepage</a></li>
               </ul>
         </div>
       </nav>
@@ -40,10 +40,10 @@
             <ul> 
               <li id="navhome"><a href="index.html">Mirror Home</a></li>
               <li id="navdistributions"><a href="distributions.html">Distributions</a></li>
-              <li id="nav3rdparty"><a href="3rdparty.html">3rd Party Repos</a></li>
               <li id="navmisc"><a href="misc.html">Misc.</a></li>
               <li id="navdirectory"><a href="directory.html">Directory Listing</a></li>
               <li id="navhistory"> <a href="history.html">History & Sponsors</a></li>
+              <li><a href="http://cslabs.clarkson.edu">CSLabs Homepage</a></li>
             </ul>
       </div>
     </nav>
@@ -85,8 +85,8 @@
           </div>
           <div class="col col--1-of-3"><img src="img/tux.png">
             <h2>Linux Kernel</h2>
-            <p>Versions of the Linux Kernel (Up to 4.3.X) can also be found on the <a href="misc.html">Misc.</a>
-              page. found in the same place is documentation and souce for the kernel.
+            <p>Versions of the Linux Kernel (Up to 4.4.X) can also be found on the <a href="misc.html">Misc.</a>
+              page, found in the same place is documentation and souce for the kernel.
               
             </p>
           </div>
@@ -94,7 +94,7 @@
         <hr>
         <h2>History</h2>
         <p>
-          The newest iteration will be completed in January 2016, but we have had Mirror
+          The newest iteration will be completed in February 2016, but we have had Mirror
           running for almost a decade now. If you want to learn more about the newest
           iteration or the history behind the project, Visit the <a href="history.html">History</a> page.
           
