--- a/misc.html
+++ b/misc.html
@@ -19,6 +19,21 @@
     </script>
   </head>
   <body>
+    <div class="navlinks">
+      <ul> 
+        <li><a href="http://cosi.clarkson.edu">CSLabs Homepage</a></li>
+        <li><a href="https://dubsdot.cosi.clarkson.edu">DubsDot</a></li>
+        <li><a href="http://docs.cosi.clarkson.edu">Docs</a></li>
+        <li><a href="http://print.cosi.clarkson.edu">Print</a></li>
+        <li><a href="http://mirror.clarkson.edu">Mirror</a></li>
+        <li><a href="http://fsuvius.cosi.clarkson.edu">Fsuvius</a></li>
+        <li><a href="http://talks.cosi.clarkson.edu">Talks</a></li>
+        <li><a href="http://cosi-lab.github.io/meeting-minutes">Meeting Minutes</a></li>
+        <li><a href="http://cosi-lab.github.io/project-updates">Project Updates</a></li>
+        <li><a href="http://moodle.cosi.clarkson.edu">COSI Moodle</a></li>
+        <li><a href="http://management.cosi.clarkson.edu">Management</a></li>
+      </ul>
+    </div>
     <header>
       <div class="container top-header"><a href="http://clarkson.edu/"><img src="img/clarksonlogo.jpg"></a>
         <h1 class="left"><a href="index.html">Mirror</a></h1><i class="fa fa-bars menu-button"></i>
@@ -31,7 +46,6 @@
                 <li id="navmisc"><a href="misc.html">Misc.</a></li>
                 <li id="navdirectory"><a href="directory.html">Directory Listing</a></li>
                 <li id="navhistory"> <a href="history.html">History & Sponsors</a></li>
-                <li><a href="http://cslabs.clarkson.edu">CSLabs Homepage</a></li>
               </ul>
         </div>
       </nav>
@@ -44,7 +58,6 @@
               <li id="navmisc"><a href="misc.html">Misc.</a></li>
               <li id="navdirectory"><a href="directory.html">Directory Listing</a></li>
               <li id="navhistory"> <a href="history.html">History & Sponsors</a></li>
-              <li><a href="http://cslabs.clarkson.edu">CSLabs Homepage</a></li>
             </ul>
       </div>
     </nav>
