Fixed email and index.html

--- a/history.html
+++ b/history.html
@@ -95,7 +95,7 @@
           </div>
           <div class="col col--2-of-4">
             <h3>Contact</h3>
-            <p><a href="mailto:cslabadmin@clarkson.edu">cslabadmin@clarkson.edu</a></p>
+            <p><a href="mailto:mirror-admin@cslabs.clarkson.edu">mirror-admin@cslabs.clarkson.edu</a></p>
           </div>
         </div>
         <div class="row">
