--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           </div>
           <div class="col col--1-of-3"><img src="img/tux.png">
             <h2>Linux Kernel</h2>
-            <p>Versions of the Linux Kernel (Up to 4.4.X) can also be found on the <a href="misc.html">Misc.</a>
+            <p>Versions of the Linux Kernel (Up to 4.5.X) can also be found on the <a href="misc.html">Misc.</a>
               page, found in the same place is documentation and souce for the kernel.
               
             </p>
@@ -107,7 +107,7 @@
         <hr>
         <h2>History</h2>
         <p>
-          The newest iteration will be completed in February 2016, but we have had Mirror
+          The newest iteration was completed in April 2016, but we have had Mirror
           running for almost a decade now. If you want to learn more about the newest
           iteration or the history behind the project, Visit the <a href="history.html">History</a> page.
           
@@ -123,7 +123,7 @@
           </div>
           <div class="col col--2-of-4">
             <h3>Contact</h3>
-            <p><a href="mailto:cslabadmin@clarkson.edu">cslabadmin@clarkson.edu</a></p>
+            <p><a href="mailto:mirror-admin@cslabs.clarkson.edu">mirror-admin@cslabs.clarkson.edu</a></p>
           </div>
         </div>
         <div class="row">
