Switching jade -> pug & updating history page

--- a/history.html
+++ b/history.html
@@ -69,18 +69,18 @@
       <div class="container">
         <h1>Sponsors</h1>
         <p>We would like to thank everyone that helped out contributing to help the new mirror possible, including:</p>
-        <div class="row">
-          <div class="col col--2-of-4"><a href="http://www.vmware.com/"><img src="img/vmware.jpg" class="logo"></a></div>
-          <div class="col col--2-of-4"><a href="https://www.siegetechnologies.com/"><img src="img/siege.jpg" class="logo"></a></div>
-        </div>
-        <p>and these other sponsors:</p>
-        <ul style="list-style-type: none;" class="center">
+        <ul class="center" style="list-style-type: none">
           <li>Eric Busse</li>
           <li>Ted Champagne</li>
           <li>Steve Evanchik</li>
           <li>Wenjin Hu</li>
           <li>Mark Platek</li>
         </ul>
+        <p>and these corporate sponsors:</p>
+        <div class="row">
+          <div class="col col--2-of-4"><a href="http://www.vmware.com/"><img class="logo" src="img/vmware.jpg"></a></div>
+          <div class="col col--2-of-4"><a href="https://www.siegetechnologies.com/"><img class="logo" src="img/siege.jpg"></a></div>
+        </div>
       </div>
       <div class="container subfooter center">
         <p>The logos are copyrighted by VMware and Siege Technologies respectively and fair use is given.</p>
