--- a/distributions.html
+++ b/distributions.html
@@ -87,7 +87,7 @@
           </div>
           <div class="col col--3-of-4">
             <h5>Note: </h5>All distros are updated 4 times daily unless said otherwise.
-            <div id="arch" class="distro">
+            <div class="distro" id="arch">
               <h3>Arch Linux</h3>
               <h5>ISOs: </h5><a href="http://mirror.clarkson.edu/archlinux/iso/latest/">http://mirror.clarkson.edu/archlinux/iso/latest/</a><br>
               <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/archlinux/">http://mirror.clarkson.edu/archlinux/</a><br>
@@ -95,7 +95,7 @@
               <h5>Upstream Mirror: </h5><a href="http://mirrors.rit.edu">mirrors.rit.edu</a><br>
               <h5>Homepage: </h5><a href="http://www.archilinux.org/">http://www.archilinux.org/</a>
             </div>
-            <div id="centos" class="distro">
+            <div class="distro" id="centos">
               <h3>CentOS (Official Mirror)</h3>
               <h5>ISOs: </h5><a href="http://mirror.clarkson.edu/centos/6/isos/">http://mirror.clarkson.edu/centos/6/isos/</a><br>
               <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/archlinux/">http://mirror.clarkson.edu/centos/</a><br>
@@ -103,7 +103,7 @@
               <h5>Upstream Mirror: </h5><a href="http://privatemirror.chpc.utah.edu">privatemirror.chpc.utah.edu</a><br>
               <h5>Homepage: </h5><a href="http://www.centos.org/">http://www.centos.org/</a>
             </div>
-            <div id="debian" class="distro">
+            <div class="distro" id="debian">
               <h3>Debian</h3>
               <h5>ISOs: </h5><a href="http://mirror.clarkson.edu/debian-cd/">http://mirror.clarkson.edu/debian-cd/</a><br>
               <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/debian/">http://mirror.clarkson.edu/debian/</a><br>
@@ -112,7 +112,7 @@
               <h5>Upstream Mirrors: </h5><a href="http://ftp.us.debian.org">ftp.us.debian.org</a> & <a href="http://cdimage.debian.org">cdimage.debian.org</a><br>
               <h5>Homepage: </h5><a href="http://www.debian.org/">http://www.debian.org/</a>
             </div>
-            <div id="fedora" class="distro">
+            <div class="distro" id="fedora">
               <h3>Fedora (Official Mirror)</h3>
               <h5>ISOs: </h5><a href="http://mirror.clarkson.edu/fedora/linux/releases/">http://mirror.clarkson.edu/fedora/linux/releases/</a><br>
               <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/fedora/linux/">http://mirror.clarkson.edu/fedora/linux/</a><br>
@@ -120,7 +120,7 @@
               <h5>Upstream Mirror: </h5><a href="http://mirrors.rit.edu">mirrors.rit.edu</a><br>
               <h5>Homepage: </h5><a href="http://fedoraproject.org/">http://fedoraproject.org/</a>
             </div>
-            <div id="gentoo" class="distro">
+            <div class="distro" id="gentoo">
               <h3>Gentoo</h3>
               <h5>ISOs: </h5><a href="http://mirror.clarkson.edu/gentoo/releases/">http://mirror.clarkson.edu/archlinux/gentoo/releases/</a><br>
               <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/gentoo/">http://mirror.clarkson.edu/gentoo/</a><br> & <a href="http://mirror.clarkson.edu/gentoo-portage/"></a>
@@ -129,7 +129,7 @@
               <h5>Upstream Mirror: </h5><a href="http://mirrors.rit.edu">mirrors.rit.edu</a><br>
               <h5>Homepage: </h5><a href="http://www.gentoo.org/">http://www.gentoo.org/</a>
             </div>
-            <div id="ipfire" class="distro">
+            <div class="distro" id="ipfire">
               <h3>IPFire (Official Mirror)</h3>
               <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/ipfire/">http://mirror.clarkson.edu/ipfire/</a><br>
               <h5>Rsync: </h5>rsync://mirror.clarkson.edu/ipfire<br><br>
@@ -137,7 +137,7 @@
               <h5>Frequency of Updates: </h5>Hourly<br>
               <h5>Homepage: </h5><a href="http://www.ipfire.org/">http://www.ipfire.org/</a>
             </div>
-            <div id="mint" class="distro">
+            <div class="distro" id="mint">
               <h3>LinuxMint</h3>
               <h5>ISOs: </h5><a href="http://mirror.clarkson.edu/linuxmint/iso/">http://mirror.clarkson.edu/linuxmint/iso/</a><br>
               <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/linuxmint/">http://mirror.clarkson.edu/linuxmint/</a><br>
@@ -147,21 +147,21 @@
               <h5>Upstream Mirror: </h5><a href="http://ftp.heanet.ie">ftp.heanet.ie</a> & <a href="http://packages.linuxmint.com">packages.linuxmint.com</a> & <a href="http://debian.linuxmint.com">debian.linuxmint.com</a><br>
               <h5>Homepage: </h5><a href="http://www.linuxmint.com/">http://www.linuxmint.com/</a>
             </div>
-            <div id="openbsd" class="distro">
+            <div class="distro" id="openbsd">
               <h3>OpenBSD</h3>
               <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/openbsd/">http://mirror.clarkson.edu/openbsd/</a><br>
               <h5>Rsync: </h5>rsync://mirror.clarkson.edu/openbsd<br><br>
               <h5>Upstream Mirror: </h5><a href="http://mirror.gtlib.gatech.edu">mirror.gtlib.gatech.edu</a><br>
               <h5>Homepage: </h5><a href="http://www.openbsd.org/">http://www.openbsd.org/</a>
             </div>
-            <div id="pfsense" class="distro">
+            <div class="distro" id="pfsense">
               <h3>pfSense</h3>
               <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/pfsense/">http://mirror.clarkson.edu/pfsense/</a><br>
               <h5>Rsync: </h5>rsync://mirror.clarkson.edu/pfsense<br><br>
               <h5>Upstream Mirror: </h5><a href="http://cvs.pfsense.org">cvs.pfsense.org</a><br>
               <h5>Homepage: </h5><a href="http://www.pfsense.org/">http://www.pfsense.org/</a>
             </div>
-            <div id="opensuse" class="distro">
+            <div class="distro" id="opensuse">
               <h3>OpenSUSE</h3>
               <h5>ISOs: </h5><a href="http://mirror.clarkson.edu/opensuse/distribution/">http://mirror.clarkson.edu/opensuse/distribution/</a><br>
               <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/opensuse/">http://mirror.clarkson.edu/opensuse/</a><br>
@@ -169,27 +169,27 @@
               <h5>Upstream Mirror: </h5><a href="http://rsync.opensuse.org">rsync.opensuse.org</a><br>
               <h5>Homepage: </h5><a href="http://www.opensuse.org/">http://www.opensuse.org/</a>
             </div>
-            <div id="sabayon" class="distro">
+            <div class="distro" id="sabayon">
               <h3>Sabayon (Official Mirror)</h3>
               <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/sabayon/">http://mirror.clarkson.edu/sabayon/</a><br>
               <h5>Rsync: </h5>rsync://mirror.clarkson.edu/sabayon<br><br>
               <h5>Upstream Mirror: </h5><a href="http://na.mirror.garr.it">na.mirror.garr.it</a><br>
               <h5>Homepage: </h5><a href="http://sabayon.org/">http://sabayon.org/</a>
             </div>
-            <div id="serenity" class="distro">
+            <div class="distro" id="serenity">
               <h3>Serenity Linux (Main Mirror)</h3>
               <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/serenity">http://mirror.clarkson.edu/serenity</a><br>
               <h5>Rsync: </h5>rsync://mirror.clarkson.edu/serenity<br><br>
               <h5>Homepage: </h5><a href="http://serenitylinux.org/">http://serenitylinux.org/</a>
             </div>
-            <div id="slackware" class="distro">
+            <div class="distro" id="slackware">
               <h3>Slackware</h3>
               <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/slackware/">http://mirror.clarkson.edu/slackware/</a><br>
               <h5>Rsync: </h5>rsync://mirror.clarkson.edu/slackware<br><br>
               <h5>Upstream Mirror: </h5><a href="http://mirror.gtlib.gatech.edu/">mirror.gtlib.gatech.edu</a><br>
               <h5>Homepage: </h5><a href="http://www.slackware.com/">http://www.slackware.com/</a>
             </div>
-            <div id="ubuntu" class="distro">
+            <div class="distro" id="ubuntu">
               <h3>Ubutnu (Official Mirror)</h3>
               <h5>ISOs: </h5><a href="http://mirror.clarkson.edu/ubuntu-releases/">http://mirror.clarkson.edu/ubuntu-releases/</a><br>
               <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/ubuntu/">http://mirror.clarkson.edu/ubuntu/</a><br>
@@ -198,7 +198,7 @@
               <h5>Upstream Mirror: </h5><a href="http://us.releases.ubuntu.com">us.release.ubuntu.com</a> & <a href="http://us.archive.ubuntu.com">us.archive.ubuntu.com</a><br>
               <h5>Homepage: </h5><a href="http://www.ubuntu.com/">http://www.ubuntu.com/</a>
             </div>
-            <div id="unitylinux" class="distro">
+            <div class="distro" id="unitylinux">
               <h3>Unity Linux (Official Mirror)</h3>
               <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/unity/">http://mirror.clarkson.edu/unity/</a><br>
               <h5>Rsync: </h5>rsync://mirror.clarkson.edu/unity<br><br>
